trunk/Archive2/f0/5fb060452403f3/output
+ g++ -std=c++11 -O2 -Wall -Wextra main.cpp
main.cpp:3:15: warning: type qualifiers ignored on function return type [-Wignored-qualifiers]
 const int foo()
               ^
main.cpp: In function ‘int main()’:
main.cpp:12:5: error: ‘cout’ was not declared in this scope
     cout<<"before:"<<check<<endl;
     ^
main.cpp:12:5: note: suggested alternative:
In file included from main.cpp:1:0:
/usr/include/c++/4.8/iostream:61:18: note:   ‘std::cout’
   extern ostream cout;  /// Linked to standard output
                  ^
main.cpp:12:29: error: ‘endl’ was not declared in this scope
     cout<<"before:"<<check<<endl;
                             ^
main.cpp:12:29: note: suggested alternative:
In file included from /usr/include/c++/4.8/iostream:39:0,
                 from main.cpp:1:
/usr/include/c++/4.8/ostream:564:5: note:   ‘std::endl’
     endl(basic_ostream<_CharT, _Traits>& __os)
     ^
